RESOLVED FIXED285068
AX: AXIsolatedTree::m_selectedTextMarkerRange is not initialized when the tree is created, causing accessibility/textarea-insertion-point-line-number.html to fail in ITM
https://bugs.webkit.org/show_bug.cgi?id=285068
Summary AX: AXIsolatedTree::m_selectedTextMarkerRange is not initialized when the tre...
Tyler Wilcock
Reported 2024-12-21 09:54:53 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-12-21 09:55:02 PST
Tyler Wilcock
Comment 2 2024-12-21 09:58:20 PST
EWS
Comment 3 2024-12-21 14:40:44 PST
Committed 288225@main (a29ef3b10961): <https://commits.webkit.org/288225@main> Reviewed commits have been landed. Closing PR #38314 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.