AX: AXIsolatedTree::m_selectedTextMarkerRange is not initialized when the tree is created, causing accessibility/textarea-insertion-point-line-number.html to fail in ITM https://bugs.webkit.org/show_bug.cgi?id=285068 rdar://141876835

Reviewed by Chris Fleizach.

When creating an AXIsolatedTree, we didn't sync the current frame selection into AXIsolatedTree::m_selectedTextMarkerRange,
meaning it would be wrong until it changed again. This commit syncs the frame selection when creating the tree, ensuring
m_selectedTextMarkerRange is right from the start.

* LayoutTests/accessibility/textarea-insertion-point-line-number.html:
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::create):

Canonical link: https://commits.webkit.org/288225@main